--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@prisma/client": "^6.13.0",
 		"@prisma/extension-accelerate": "^2.0.2",
 		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-navigation-menu": "^1.2.13",
 		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@radix-ui/react-separator": "^1.1.7",
