--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"update-cards": "tsx scripts/update-cards.ts"
 	},
 	"dependencies": {
 		"@prisma/client": "^6.13.0",
