--- a/.github/workflows/update-cards.yml
+++ b/.github/workflows/update-cards.yml
@@ -14,22 +14,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Setup database
-        run: npx prisma generate
+        run: pnpm prisma generate
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run card update script
-        run: npm run update-cards
+        run: pnpm run update-cards
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
